--- a/_tu_helper/_Wiki/_Odoo/Львов/4.5. Представлення пошуку/4. Специфіка для дат.md
+++ b/_tu_helper/_Wiki/_Odoo/Львов/4.5. Представлення пошуку/4. Специфіка для дат.md
@@ -10,7 +10,7 @@
    </field>
 </record>
 
-Поля типу Date або Datetime без вказаного домену мають специфічний фільтр, який дозволяє обрати один з трьох найближчих
-місяціі, кварталів, років.
+Поля типу Date або Datetime без вказаного домену мають специфічний фільтр,
+який дозволяє обрати один з трьох найближчих місяців, кварталів, років.
 
 ![img_4.png](img_4.png)
