--- a/_tu_helper/_Wiki/_Odoo/Львов/4.5. Представлення пошуку/7. Панель пошуку.md
+++ b/_tu_helper/_Wiki/_Odoo/Львов/4.5. Представлення пошуку/7. Панель пошуку.md
@@ -14,7 +14,8 @@
 
 Панель пошуку - швидкий інструмент для фільтрації даних, створюється за допомогою тегу searchpanel і доступний для
 представлень з багатьма записами, такими як список, канбан тощо і відповідно недоступний для форми і аналогічних
-представлень. За замовчанням відкритий для представлень список та канбан, але може бути відкритим до інших представлень
+представлень. За замовчанням відкритий для представлень список та канбан, 
+але може бути відкритим до інших представлень
 за допомогою атрибута view_types, де через кому перелічуються потрібні представлення.
 
 ![img_7.png](img_7.png)
