--- a/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
+++ b/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
@@ -63,7 +63,7 @@ restore with filestore то нужно удалить еще и содержим
 
        нажать Сontinue
 
-
+![img.png](img.png)
 
 ===================================================
 Восстановление базы данных локально
