--- a/_tu_helper/_Wiki/_Python/Условия/Условия.md
+++ b/_tu_helper/_Wiki/_Python/Условия/Условия.md
@@ -1,3 +1,12 @@
-if 'stage_id' in vals and 'kanban_state' not in vals:
 
-check_type = record.check_type if record.check_type else ''
+    check_type = record.check_type if record.check_type else ''
+
+    if 'name' in vals:
+        am_name = vals['name']
+    else:
+        am_name = record_am.name
+
+
+    if 'stage_id' in vals and 'kanban_state' not in vals:
+    
+    else:
