--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Search Panel/Пример.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Search Panel/Пример.md
@@ -1,14 +1,15 @@
-Давайте предположим, у нас есть модель Product, представляющая товары, и мы хотим создать Search Panel для поиска товаров по различным критериям, таким как категория, цена, название и другие атрибуты.
+Давайте предположим, у нас есть модель Product, представляющая товары, и мы хотим создать Search Panel для поиска
+товаров по различным критериям, таким как категория, цена, название и другие атрибуты.
 
 Вот пример XML-кода для создания такой Search Panel:
 
 xml
 Copy code
 <search>
-    <field name="category_id" string="Category" filter_domain="[['categ_id','=',self]]"/>
-    <field name="list_price" string="Price"/>
-    <field name="name" string="Name" filter_domain="['|', ('name', 'ilike', self), ('description', 'ilike', self)]"/>
-    <field name="active" string="Active" filter_domain="[('active','=',self)]"/>
+<field name="category_id" string="Category" filter_domain="[['categ_id','=',self]]"/>
+<field name="list_price" string="Price"/>
+<field name="name" string="Name" filter_domain="['|', ('name', 'ilike', self), ('description', 'ilike', self)]"/>
+<field name="active" string="Active" filter_domain="[('active','=',self)]"/>
 </search>
 В этом примере:
 
@@ -17,4 +18,6 @@ category_id - фильтр по категории товара.
 list_price - фильтр по цене товара.
 name - фильтр по названию товара или его описанию, с использованием оператора "или".
 active - фильтр для активных или неактивных товаров.
-Вы можете добавить столько фильтров, сколько нужно, и настроить их так, чтобы они соответствовали вашим конкретным потребностям. Каждый фильтр будет предоставлять пользователю возможность выбирать значения для поиска и автоматически фильтровать результаты.
+Вы можете добавить столько фильтров, сколько нужно, и настроить их так, чтобы они соответствовали вашим конкретным
+потребностям. Каждый фильтр будет предоставлять пользователю возможность выбирать значения для поиска и автоматически
+фильтровать результаты.
