--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
@@ -1,3 +1,5 @@
+# открыть форму модели
+=================================
     def open_account_move(self):
         new_move.id = self.env['account.move'].search( .....)
 
@@ -9,4 +11,23 @@
             'target': 'current',
             'name': 'Newly created Account Move',
             'res_id': new_move.id,
+        }
+
+
+# открыть форму wizard
+=================================
+        return {
+            'context': self.env.context,
+            'view_type': 'form',
+            'view_mode': 'form',
+            'res_model': 'mo_accounting_tools.replace_an_acc_in_am_line',
+            'res_id': self.id,
+            'view_id': False,
+            'type': 'ir.actions.act_window',
+            'target': 'new',
+            'date_start': self.date_start,
+            'date_finish': self.date_finish,
+            'limit_rec': self.limit_rec,
+            'from_analytic_account': self.from_analytic_account,
+            'to_analytic_account': self.to_analytic_account,
         }
