--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Fields/поле со значением по умолчанию.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Fields/поле со значением по умолчанию.md
@@ -1,6 +1,51 @@
-Many2one
+Many2one (browse)
 ===============================================
 
     to_analytic_account = fields.Many2one(
             'account.analytic.account', string='Analytic Account (to)', required=True,
             default=lambda self: self.env['account.analytic.account'].browse([223]))
+
+Many2one (search)
+===============================================
+
+    receivable_acc_advances_nat = fields.Many2one('account.account', string='National Advances Debit Account',
+                                                  default=lambda self: self.env['account.account'].search(
+                                                      [('code', '=', 681100)]))
+
+Many2one (company.currency_id)
+===============================================
+
+    currency_id = fields.Many2one('res.currency', string='Currency', default=lambda self: self.env.company.currency_id)
+
+Datetime
+===============================================
+
+    updated = fields.Datetime('Updated', default=lambda self: fields.Datetime.now())
+    period_from = fields.Datetime(string='From', store=True, index=True, copy=False, default=lambda record: fields.Date.today() - relativedelta(days=14))
+
+    ??? create_date = fields.Date(string='Create Date', default=fields.Date.context_today, readonly=True)
+
+Integer
+===============================================
+
+    limit_rec = fields.Integer(string='limit',
+    default=200,
+    )
+
+Char (чтоб переводить слово New????)
+===============================================
+    name = fields.Char('Reference', copy=False, readonly=True, default=lambda x: _('New'))
+
+
+
+    lead_tomerge_ids = fields.Many2many(
+        'crm.lead', 'crm_convert_lead_mass_lead_rel',
+        string='Active Leads', context={'active_test': False},
+        default=lambda self: self.env.context.get('active_ids', []),
+
+
+
+
+    color = fields.Integer(
+        string='Color Index', default=lambda self: self._default_color(),
+        help='Tag color. No color means no display in kanban to distinguish internal tags from public categorization tags.')
