--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
@@ -1,5 +1,6 @@
 # открыть форму модели
 =================================
+
     def open_account_move(self):
         new_move.id = self.env['account.move'].search( .....)
 
@@ -13,9 +14,9 @@
             'res_id': new_move.id,
         }
 
-
 # открыть форму wizard
 =================================
+
         return {
             'context': self.env.context,
             'view_type': 'form',
@@ -31,3 +32,12 @@
             'from_analytic_account': self.from_analytic_account,
             'to_analytic_account': self.to_analytic_account,
         }
+
+
+    return {
+            'context': {'skip_invoice_sync':True,
+            'skip_invoice_line_sync':True,}
+
+           'view_type': 'form',
+            'view_mode': 'form',
+ 
