--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Методы/_  (метод перевода).md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Методы/_  (метод перевода).md
@@ -1,4 +1,4 @@
-В контексте программирования на языке Python, _ обычно используется как сокращение для функции gettext, которая является
+ _ обычно используется как сокращение для функции gettext, которая является
 инструментом для локализации (перевода) строк в программном коде.
 
 from odoo import models, fields, _
