--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -3,9 +3,11 @@ https://odootricks.tips/automated-action-to-prevent-duplicates/
 
 https://doc.open-odoo.ru/developer/13.0/ru/reference/qweb.html#python
 
-
+Учебники по работе с Odoo
 https://blog.yartsev.by/odoo_tutorials/content.html
+
 
 https://odoo-development.readthedocs.io/ru/latest/dev/py/fields.html
 
 https://doc.open-odoo.ru/developer/13.0/ru/reference/orm.html
+
