--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Открыть форму/Открыть форму.md
@@ -41,3 +41,26 @@
            'view_type': 'form',
             'view_mode': 'form',
  
+# открыть форму модели
+=================================
+    def action_open_layer(self):
+        self.ensure_one()
+        return {
+            'res_model': self._name,
+            'type': 'ir.actions.act_window',
+            'views': [[False, "form"]],
+            'res_id': self.id,
+        }
+
+    def action_open_reference(self):
+        self.ensure_one()
+        if self.stock_move_id:
+            action = self.stock_move_id.action_open_reference()
+            if action['res_model'] != 'stock.move':
+                return action
+        return {
+            'res_model': self._name,
+            'type': 'ir.actions.act_window',
+            'views': [[False, "form"]],
+            'res_id': self.id,
+        }
