--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Wizard (TransientModel)/Візарди. Моделі без зберігання 3.7.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Wizard (TransientModel)/Візарди. Моделі без зберігання 3.7.md
@@ -90,7 +90,7 @@ string='Country',
 	                        <label for="names" class="oe_edit_only"/>
 	                        <h3><field name="names" placeholder="Names separated by comma"/></h3>
 	                    </div>
-group>
+						<group>
 	                        <group>
 	                            <field name="company_type" widget="radio" options="{'horizontal': true}"/>
 	                            <field name="country_id" options="{'no_create': True}"/>
