--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
@@ -1,3 +1,17 @@
+поля в одну строку
+=====================================================
+![img.png](img.png)
+
+    <label for="interval_number" string="Виконати кожен"/>
+    <div>
+       <field name="interval_number" class="oe_inline"/>
+       <field name="interval_type" class="oe_inline"/>
+    </div>
+
+
+поля в одну строку с текстом
+=====================================================
+
 ![Screenshot_1.png](Screenshot_1.png)
 
         <label for="current_value_svl" string="Current Value"/>
