--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Фильтр при Открытии/Фильтр - не снимаемый .md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Фильтр при Открытии/Фильтр - не снимаемый .md
@@ -1,6 +1,8 @@
 Фильтр не снимаемый - в actions
 ==================================
 
+# actions + domain
+
     <record model="ir.actions.act_window" id="action_account_asset_form">
         <field name="name">Assets</field>
         <field name="res_model">account.asset</field>
@@ -12,7 +14,8 @@
         <field name="domain">[('asset_type', '=', 'purchase'), ('state', '!=', 'model'), ('parent_id', '=', False)]</field>
 
         <field name="context">{'asset_type': 'purchase', 'default_asset_type': 'purchase'}</field>
-        <field name="help" type="html">
+ 
+       <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create new asset
             </p>
