--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Фильтр при Открытии/Фильтр - снимаемый .md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Tree/Фильтр при Открытии/Фильтр - снимаемый .md
@@ -1,6 +1,8 @@
 Фильтр снимаемый - search  и actions + context
 ==================================
 
+# search
+
        <record id="ir_cron_view_search" model="ir.ui.view">
             <field name="model">ir.cron</field>
             <field name="arch" type="xml">
@@ -11,7 +13,9 @@
                     <field name="nextcall"/>
                     <field name="active"/>
                     <separator/>
+
                     <filter string="All" name="all" domain="['|', ('active', '=', False), ('active', '=', True)]" />
+
                     <separator/>
                     <filter string="Archived" name="inactive" domain="[('active', '=', False)]"/>
                     <group expand="0" string="Group By">
@@ -23,10 +27,18 @@
             </field>
         </record>
 
+# actions + context (search_default_all)
+
         <record id="ir_cron_act" model="ir.actions.act_window">
             <field name="name">Scheduled Actions</field>
             <field name="res_model">ir.cron</field>
             <field name="view_mode">tree,form,calendar</field>
+
             <field name="context">{'search_default_all': 1}</field>
+
             <field name="view_id" ref="ir_cron_view_tree"/>
         </record>
+
+
+![img.png](img.png)
+![img_1.png](img_1.png)
