--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -11,3 +11,5 @@ https://odoo-development.readthedocs.io/ru/latest/dev/py/fields.html
 
 https://doc.open-odoo.ru/developer/13.0/ru/reference/orm.html
 
+Инструкции и simbioz.ua
+https://simbioz.ua/documentation/uk/developer.html
