--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/_Теги представления/Форма.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/_Теги представления/Форма.md
@@ -121,9 +121,11 @@ Sheet - створює відображення, схоже на аркуш.
            </button>
     
        </div>
+
 Приклад в _tu_helper\_Wiki\_Odoo\Pictures\Представлення форми4.png
 Зона кнопок відділяється тегом div, що має клас oe_button_box.
-Для пристойного відображення кнопки вимагають іконки та специфічної верстки текст за допомогою  <span class="o_stat_text">.
+Для пристойного відображення кнопки вимагають іконки та специфічної верстки текст за
+допомогою  <span class="o_stat_text">.
 
                    <div class="oe_button_box" name="button_box">
                         <button type="object"
@@ -219,24 +221,25 @@ separator
 Приклад в _tu_helper\_Wiki\_Odoo\Pictures\Представлення форми6.png
 
 
-===================================================
+
 Chatter
-
-<div class="oe_chatter">
-   <field name="message_follower_ids"/>
-   <field name="activity_ids"/>
-   <field name="message_ids"/>
-</div>
-
-class Book(models.Model):
-_name = 'kw.lib.book'
-_inherit = ['portal.mixin', 'mail.thread', 'mail.activity.mixin',  ]
-_description = 'Book'
-
+===================================================
 Чаттер - це особлива зона, що надає можливість відправляти повідомлення, залишати примітики, переглядати повідомлення і
 примітки, планувати і переглядати дії, додавати прикріплення, керувати підписками.
 
 Коректно працює лише для моделей, що наслідують міксини 'portal.mixin', 'mail.thread', 'mail.activity.mixin'.
+
+    <div class="oe_chatter">
+       <field name="message_follower_ids"/>
+       <field name="activity_ids"/>
+       <field name="message_ids"/>
+    </div>
+    
+    class Book(models.Model):
+    _name = 'kw.lib.book'
+    _inherit = ['portal.mixin', 'mail.thread', 'mail.activity.mixin',  ]
+    _description = 'Book'
+
 Приклад в _tu_helper\_Wiki\_Odoo\Pictures\Представлення форми8.png
 ===================================================
 
