--- a/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
+++ b/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
@@ -10,3 +10,10 @@
     
     print(f"Текущая дата и время: {current_datetime}")
     print(f"Дата и время после вычитания 3 минут: {new_datetime}")
+
+Разница дат - 
+================================
+это не int - это datetime
+
+        full_last_month_days = (last_month_date - previous_month_date).days
+        delta_days = (date_to - previous_month_date).days + 1
