--- a/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
+++ b/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
@@ -11,6 +11,20 @@
     print(f"Текущая дата и время: {current_datetime}")
     print(f"Дата и время после вычитания 3 минут: {new_datetime}")
 
+
+Добавляем 10 дней
+================================
+    from datetime import datetime, timedelta
+    
+    # Исходная дата
+    original_date = datetime.now()
+    
+    # Добавляем 10 дней
+    new_date = original_date + timedelta(days=10)
+    
+    print("Исходная дата:", original_date)
+    print("Дата после добавления 10 дней:", new_date)
+
 Разница дат - 
 ================================
 это не int - это datetime
