--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
@@ -13,14 +13,40 @@
 
 ![Screenshot_1.png](Screenshot_1.png)
 
-    <label for="current_value_svl" string="Current Value"/>
+        <label for="current_value_svl" string="Current Value"/>
         <div class="o_row">
             <span>
             <field name="current_value_svl" class="oe_inline" widget="monetary"/> for <field name="current_quantity_svl" class="oe_inline"/> <field name="product_uom_name" class="oe_inline"/>
             </span>
         </div>
+
         <label for="added_value" string="Added Value"/>
         <div class="o_row">
             <span><field name="added_value" class="oe_inline"/> = <field name="new_value" class="oe_inline"/> (<field name="new_value_by_qty" class="oe_inline ms-1"/> by <field name="product_uom_name" class="oe_inline me-1"/>)
             <small class="mx-2 fst-italic">Use a negative added value to record a decrease in the product value</small></span>
         </div>
+
+
+поля в одну строку с текстом
+=====================================================
+![img_1.png](img_1.png)
+
+        <group col="2">
+            <group>
+                <label for="novinka_period_start" string="novinka_period"/>
+                <div class="o_row">
+                    <span>
+                        <field name="novinka_period_start" class="oe_inline"/> -
+                        <field name="novinka_period_start" class="oe_inline"/>
+                        <button name="button_set_novinka_period"
+                                icon="fa-refresh"
+                                title="Set nova_period flags"
+                                type="object"/>
+                    </span>
+                </div>
+            </group>
+
+            <group>
+                <field name="create_date" class="oe_inline"/>
+            </group>
+        </group>
