--- a/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
+++ b/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
@@ -144,6 +144,20 @@ UPDATE ir_config_parameter SET value='https://identity-dev.eco2.pro' WHERE key='
 UPDATE res_users SET password = '$pbkdf2-sha512$25000$VmrNGcMYYwyhlHKu9b7Xeg$fjY68ixPFB4v9G74YlA4F9UuRBPa4tTInMFth5k5FVaslLh2.zkbZ2W3s10GzSapiddKg51O64QrkiCFXa5.hg' WHERE id = 2;
 
 
+UPDATE ir_config_parameter SET value='False' WHERE key='web.base.production_mode';
+UPDATE ir_config_parameter SET value='*' WHERE key='edin_service.password';
+UPDATE ir_config_parameter SET value='*' WHERE key='mo.turbosms.token';
+UPDATE ir_config_parameter SET value='21612b26-90b0-468f-bd15-234bdaeaea17' WHERE key='tranzoo.api_key';
+UPDATE ir_config_parameter SET value='QWhxYlE3bldLN2N4NHlySDZKaTFlcWt6' WHERE key='tranzoo.api_secret';
+UPDATE ir_config_parameter SET value='84936ebb-fb45-48ef-9d72-e450bf764649' WHERE key='tranzoo.pos_id';
+UPDATE ir_config_parameter SET value='*' WHERE key='database.secret';
+UPDATE ir_config_parameter SET value='stplatformstage.odoo' WHERE key='sftp_tools.login';
+UPDATE ir_config_parameter SET value='2s7vSUPtfcNETxv6+9Tm9jjazc1mOqGF' WHERE key='sftp_tools.password';
+UPDATE ir_config_parameter SET value='stplatformstage.blob.core.windows.net' WHERE key='sftp_tools.server';
+UPDATE ir_config_parameter SET value='https://dev-e.turbo.ua' WHERE key='turbo.ua.static_url';
+UPDATE ir_config_parameter SET value='https://gw-platform-dev.eco2.pro' WHERE key='ecomm.main_url';
+UPDATE ir_config_parameter SET value='https://identity-dev.eco2.pro' WHERE key='ecomm.auth_url';
+
 
 ==========================================================
 удалить модуль mass_edit
