--- a/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
+++ b/_tu_helper/_Wiki/_Odoo/Настройка/Обновление локальной базы.md
@@ -159,6 +159,12 @@ UPDATE ir_config_parameter SET value='https://gw-platform-dev.eco2.pro' WHERE ke
 UPDATE ir_config_parameter SET value='https://identity-dev.eco2.pro' WHERE key='ecomm.auth_url';
 
 
+=========================================================
+отключить кроны
+
+UPDATE ir_cron SET active='False';
+
+
 ==========================================================
 удалить модуль mass_edit
 ==========================================================
