--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/поля в несколько колонок.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/поля в несколько колонок.md
@@ -22,6 +22,23 @@
 =====================================================
 
     <group col="3">
+        <group>
+            <field name="is_acquirer"/>
+        </group>
+
+        <group>
+            <field name="date"/>
+        </group>
+
+        <group>
+            <field name="rate"/>
+        </group>
+    </group>
+
+в 3-ри колонки group col="3"
+=====================================================
+
+    <group col="3">
 
         <group>
             <field name="mo_approval_id" string="Approval" readonly="1"/>
@@ -43,3 +60,5 @@
             <field name="move_type" string="move_type" readonly="1"/>
         </group>
     </group>
+
+
