--- a/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
+++ b/_tu_helper/_Wiki/_Python/Типы данных/Дата/Отнять от даты.md
@@ -31,3 +31,22 @@
 
     full_last_month_days = (last_month_date - previous_month_date).days
     delta_days = (date_to - previous_month_date).days + 1
+
+
+в секундах, можно воспользоваться атрибутом .total_seconds() объекта timedelta. Вот пример:
+
+python
+Копировать код
+from datetime import datetime, timedelta
+
+# Пример значений для time_start и time_end
+time_start = datetime(2023, 6, 1, 14, 30, 0)
+time_end = datetime(2023, 6, 1, 15, 45, 0)
+
+# Вычисление разницы
+time_difference = time_end - time_start
+
+# Получение разницы в секундах
+difference_in_seconds = time_difference.total_seconds()
+
+print("Разница в секундах:", difference_in_seconds)
