--- a/_tu_helper/_Wiki/_Pycharm/Авто отслеживание.md
+++ b/_tu_helper/_Wiki/_Pycharm/Авто отслеживание.md
@@ -16,4 +16,4 @@ PyCharm, выполните следующие шаги:
 
 В меню настроек выберите опцию "Always Select Opened File" (Всегда выбирать открытый файл) или "Autoscroll from
 Source" (Автопрокрутка от источника).
-![img_1.png](img_1.png)
+![img_1.png](img_1.png)[_Py_script](..%2F..%2F_Py_script)
