--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -13,3 +13,6 @@ https://doc.open-odoo.ru/developer/13.0/ru/reference/orm.html
 
 Инструкции и simbioz.ua
 https://simbioz.ua/documentation/uk/developer.html
+
+Карабанов
+https://odoo-ua.com/blog/programuvannia-2/vidzheti-dlia-poliv-tipu-many2one-23
