--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -11,8 +11,11 @@ https://odoo-development.readthedocs.io/ru/latest/dev/py/fields.html
 
 https://doc.open-odoo.ru/developer/13.0/ru/reference/orm.html
 
-Инструкции и simbioz.ua
+Инструкции simbioz.ua
 https://simbioz.ua/documentation/uk/developer.html
 
 Карабанов
 https://odoo-ua.com/blog/programuvannia-2/vidzheti-dlia-poliv-tipu-many2one-23
+
+Последние релизы
+https://runbot.odoo.com/
