--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -17,5 +17,8 @@ https://simbioz.ua/documentation/uk/developer.html
 Карабанов
 https://odoo-ua.com/blog/programuvannia-2/vidzheti-dlia-poliv-tipu-many2one-23
 
+Ссылки на сайты от Артели
+![img.png](img.png)
+
 Последние релизы
 https://runbot.odoo.com/
