--- a/_tu_helper/_Wiki/_Odoo/Ссылки.md
+++ b/_tu_helper/_Wiki/_Odoo/Ссылки.md
@@ -26,3 +26,6 @@ https://odoo-ua.com/blog/programuvannia-2/vidzheti-dlia-poliv-tipu-many2one-23
 
 Последние релизы
 https://runbot.odoo.com/
+
+javascript
+https://doc.open-odoo.ru/developer/13.0/ru/reference/javascript_reference.html
