--- a/_tu_helper/_Wiki/_Odoo/Настройка/Окончание срока базы.md
+++ b/_tu_helper/_Wiki/_Odoo/Настройка/Окончание срока базы.md
@@ -1,2 +1,5 @@
 инструменты разработчика в браузере (правой кнопкой и исследовать (посмотреть код)) там консоль 
 и прописать вот это $.unblockUI()
+
+Параметр системы - database.expiration_date - установить дату на подальше
+
