--- a/_tu_helper/_Wiki/_Odoo/Установка Оду/Установка 17/Установка2.md
+++ b/_tu_helper/_Wiki/_Odoo/Установка Оду/Установка 17/Установка2.md
@@ -15,9 +15,10 @@ https://github.com/odoo/odoo
 3. 
 ![img_2.png](img_2.png)
 3. Pycharm - New Project - на папку Odoo_17
-4. ![img_3.png](img_3.png)
+![img_3.png](img_3.png)
 5. в проводнике в папке Odoo_17 - создать папку include, в нее (в проводнике) перенести исходники (например odoo-17.0) 
-4. установить все из requarement
+
+5. установить все из requarement
 ![img_4.png](img_4.png)
 ![img_5.png](img_5.png)
 5. файлик odoo.conf
