--- a/_tu_helper/_Wiki/_Odoo/Установка Оду/Установка 17/Установка2.md
+++ b/_tu_helper/_Wiki/_Odoo/Установка Оду/Установка 17/Установка2.md
@@ -31,9 +31,13 @@ https://github.com/odoo/odoo
 6. pycharm conf запуска
 ![img_10.png](img_10.png)
 ![img_11.png](img_11.png)
-7. запустить - база должна сама создастся
+7. ![img_12.png](img_12.png)
+
+D:\Work_Odoo\Odoo_SMK\Odoo_18_c\odoo-bin
+-c "D:/Work_Odoo/Odoo_SMK/smk_portal.conf" -d smk_portal -u smk_elearn --dev=all
+
+8. запустить - база должна сама создастся
 8. заходим в Одуу
 8. admin admin
 
 9. https://stage-erp.cooker.net.ua/web/database/manager
-9. 
