--- a/_tu_helper/_Wiki/_Python/Условия/Условия.md
+++ b/_tu_helper/_Wiki/_Python/Условия/Условия.md
@@ -1,3 +1,77 @@
+========================================================
+Базовый синтаксис if
+========================================================
+python
+Copy
+Edit
+if условие:
+    # код, если условие истинно
+✅ С else
+python
+Copy
+Edit
+========================================================
+if условие:
+    # код, если условие истинно
+else:
+    # код, если условие ложно
+✅ С elif (else if)
+python
+Copy
+Edit
+========================================================
+if условие1:
+    # код, если условие1 истинно
+elif условие2:
+    # код, если условие2 истинно
+else:
+    # код, если ни одно условие не сработало
+📌 Примеры
+Проверка числа:
+python
+Copy
+Edit
+number = 5
+
+========================================================
+if number % 2 == 0:
+    print("Чётное число")
+else:
+    print("Нечётное число")
+Проверка возраста:
+python
+Copy
+Edit
+age = 16
+
+if age >= 60:
+    print("Пенсионер")
+elif age >= 18:
+    print("Взрослый")
+else:
+    print("Несовершеннолетний")
+
+========================================================
+ Синтаксис в одну строку (тернарный оператор)
+========================================================
+python
+Copy
+Edit
+<выражение_если_True> if <условие> else <выражение_если_False>
+📌 Примеры
+Возраст:
+python
+Copy
+Edit
+age = 20
+status = "Совершеннолетний" if age >= 18 else "Несовершеннолетний"
+print(status)
+Чётность числа:
+python
+Copy
+Edit
+number = 7
+print("Чётное") if number % 2 == 0 else print("Нечётное")
 
     check_type = record.check_type if record.check_type else ''
 
