--- a/_tu_helper/_Wiki/context-docs/master_promt/12.md
+++ b/_tu_helper/_Wiki/context-docs/master_promt/12.md
@@ -187,4 +187,4 @@ aliases: lists, bullets
   - README.md — правила оформления .md (см. ниже)
    
 Сгенерируй все файлы проекта (желательно дать ссылку на ZIP и/или отдельные ссылки).
-Покажи полностью исходник tools/open_doc.py.
+Покажи полностью исходник tools/context_doc.py.
