--- a/_tu_helper/_Wiki/context-docs/master_promt/12.md
+++ b/_tu_helper/_Wiki/context-docs/master_promt/12.md
@@ -10,7 +10,7 @@
 - Весь код должен быть **разбит на логические блоки** (Константы, Функции парсинга, Поиск, Построение дерева, UI, Main).
 - Каждая функция содержать **подробные комментарии на русском** с пояснением, что она делает и зачем.
 - Все участки кода в т.ч внутри функций **сильно комментирован на русском** и снабжены пояснением "что и зачем делаем"
-- Класс `App` для UI должен содержать только логику интерфейса и работы с готовыми данными.
+- Класс `App_UI` для UI должен содержать только логику интерфейса и работы с готовыми данными.
 - Стиль кода — линейный, без излишней абстракции и усложнения.
 - Минимум вложенностей, максимум понятности
 - Файл самодостаточный, без внешних зависимостей
@@ -22,7 +22,8 @@
 - Читать только `.md` файлы в кодировке UTF-8 (fallback — cp1251).
 
 # 3. Парсинг .md
-- Парсить секции, начинающиеся с заголовка `## <ключ>` (разделители `===` / `---` до/после заголовка — опциональны).
+- Парсить секции, начинающиеся с заголовка `## <ключ>` .
+- Разделители ===... и ---... разрешены (необязательны), длина любая ≥3, игнорируются парсером.
 
 - После заголовка опционально может быть:
   - строка дерева категорий (`categories: Категория 1 - Категория 2 - ...`);
