--- a/_tu_helper/_Wiki/context-docs/master_promt/12.md
+++ b/_tu_helper/_Wiki/context-docs/master_promt/12.md
@@ -53,7 +53,7 @@
   - Fuzzy-поиск для неточных запросов;
   - Если есть точное совпадение — оно приоритетнее;
   - Результат — Section или None + список кандидатов.
-  - если кандидатов несколько - нужно вызвать форму для выбора нужного, с точным совпадением всегда первый
+  - если кандидатов несколько - хранить список всех кандидатов, с точным совпадением всегда первый
 
 
 # 5. **Точная схема UI**
@@ -67,7 +67,7 @@
   3. Кнопка `▶` (width=3) — Вперёд.
   4. Отступ 10px.
   5. Метка `Поиск:`.
-  6. Поле ввода (`ttk.Entry`) — растягивается на всё оставшееся пространство.
+  6. Поле ввода (`ttk.Entry` или `ttk.Combobox`) — со списком всех кандидатов растягивается на всё оставшееся пространство.
   7. Отступ 4px.
   8. Кнопка `Искать`.
   9. Отступ 4px.
@@ -90,9 +90,15 @@
 - Делится на **верх** и **низ**, вес 3:2.
 
 #### Верхняя панель (Markdown-текст)
-- `ttk.Frame(padding=6)` внутри верхней половины.
-- Многострочное `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`), занимает всё пространство.
-- Вертикальный скроллбар справа.
+   - `ttk.Frame(padding=6)` внутри верхней половины.
+
+1. **Верхняя строка (показать полный путь к файлу)**:
+   - Метка `Файл:`.
+   - поле с полным путем к файлу
+   
+2. **Текстовое поле для Markdown-текст**:   
+   - Многострочное `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`), занимает всё пространство.
+   - Вертикальный скроллбар справа.
 
 #### Нижняя панель (Кодовые блоки)
 - `ttk.Frame(padding=6)` внутри нижней половины.
