--- a/_tu_helper/_Wiki/context-docs/master_promt/12.md
+++ b/_tu_helper/_Wiki/context-docs/master_promt/12.md
@@ -67,7 +67,7 @@
   3. Кнопка `▶` (width=3) — Вперёд.
   4. Отступ 10px.
   5. Метка `Поиск:`.
-  6. Поле ввода (`ttk.Entry` или `ttk.Combobox`) — со списком всех кандидатов растягивается на всё оставшееся пространство.
+  6. поле (`ttk.Combobox`) (в режиме ввода текста, state="normal") — со списком всех кандидатов растягивается на всё оставшееся пространство.
   7. Отступ 4px.
   8. Кнопка `Искать`.
   9. Отступ 4px.
@@ -92,9 +92,14 @@
 #### Верхняя панель (Markdown-текст)
    - `ttk.Frame(padding=6)` внутри верхней половины.
 
-1. **Верхняя строка (показать полный путь к файлу)**:
+1. **Горизонтальная «шапка» (ttk.Frame), занимающую всю ширину (показать полный путь к файлу)**:
    - Метка `Файл:`.
    - поле с полным путем к файлу
+   - горизонтальную «шапку» (ttk.Frame), занимающую всю ширину.
+   - Слева — элемент, показывающий полный путь к текущему .md (на выбор: ttk.Label с font=("Consolas",10) и wraplength 
+   для переноса, или ttk.Entry(state="readonly") для удобного копирования).
+   - Справа — две кнопки: «Копировать путь» — копирует полный путь в буфер обмена. 
+   «Открыть папку» — открывает каталог файла в Проводнике/Файндере/менеджере файлов (Windows: explorer, macOS: open, Linux: xdg-open).
    
 2. **Текстовое поле для Markdown-текст**:   
    - Многострочное `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`), занимает всё пространство.
