--- a/_tu_helper/_Wiki/context-docs/master_promt/12.md
+++ b/_tu_helper/_Wiki/context-docs/master_promt/12.md
@@ -1,15 +1,17 @@
-Ты — Python-разработчик, который пишет утилиту для просмотра документации в формате Markdown с расширенным поиском (`python script.py <ключ>`) .  
+Ты — Python-разработчик, который пишет утилиту для просмотра документации в формате Markdown с расширенным
+поиском (`python script.py <ключ>`) .  
 Код должен быть максимально простым и содержать подробные комментарии на русском.  
-Твоя задача — сгенерировать полностью готовый **самодостаточный скрипт** на Python 
-Весь функционал и интерфейс должен быть реализован в одном .py файле, который:  
+Твоя задача — сгенерировать полностью готовый **самодостаточный скрипт** на Python
+Весь функционал и интерфейс должен быть реализован в одном .py файле, который:
 
 # 1. Общие требования
+
 - Работает на Python 3.8+.
 - Не использует внешние зависимости (только стандартная библиотека, в том числе `tkinter` для UI).
 - Код должен быть **максимально простым** для понимания программистами среднего уровня.
 - Весь код должен быть **разбит на логические блоки** (Константы, Функции парсинга, Поиск, Построение дерева, UI, Main).
-- Каждая функция содержать **подробные комментарии на русском** с пояснением, что она делает и зачем.
-- Все участки кода в т.ч внутри функций **сильно комментирован на русском** и снабжены пояснением "что и зачем делаем"
+- Каждая функция должна содержать **подробные комментарии на русском** с пояснением, что она делает и зачем.
+- Все участки кода в т.ч внутри функций **сильно комментированы на русском** и снабжены пояснением "что и зачем делаем"
 - Класс `App_UI` для UI должен содержать только логику интерфейса и работы с готовыми данными.
 - Стиль кода — линейный, без излишней абстракции и усложнения.
 - Минимум вложенностей, максимум понятности
@@ -17,118 +19,134 @@
 - Минимизировать вложенность кода, писать максимально читаемо.
 
 # 2. Функциональные требования
+
 - Рекурсивно сканировать папку `docs/` (по умолчанию — на уровень выше текущего скрипта),
 - игнорируя служебные папки (`node_modules`, `.git`, `site`, `.venv`, `venv`, `__pycache__`).
 - Читать только `.md` файлы в кодировке UTF-8 (fallback — cp1251).
 
 # 3. Парсинг .md
+
 - Парсить секции, начинающиеся с заголовка `## <ключ>` .
 - Разделители ===... и ---... разрешены (необязательны), длина любая ≥3, игнорируются парсером.
 
 - После заголовка опционально может быть:
-  - строка дерева категорий (`categories: Категория 1 - Категория 2 - ...`);
-  - строка алиасов (`aliases: alias1, alias2, ...`).
+    - строки дерева категорий может быть несколько, тогда секция будет показана в нескольких
+      категориях(`categories: Категория 1 - Категория 2 - ...`);
+    - строка алиасов (`aliases: alias1, alias2, ...`).
 - Извлекать:
-  - `display_key` (оригинальный ключ);
-  - `key` (нормализованный lowercase ключ);
-  - `tokens` (разбиение ключа по [^a-z0-9_], чтобы `ul-ol-li` искалось по `ul`, `ol`, `li`) (`ul-ol-li` → `ul`, `ol`, `li`);
-  - `categories` (список категорий);
-  - `aliases` (нормализованные lowercase);
-  - `file_path`, `start_line`;
-  - `markdown` содержимое секции;
-  - список код-блоков **кодовые блоки** внутри секции (` ```lang ... ``` `), поддерживает любые языки (`c++`, `tsx`, и т.п.).
-  - 
+    - `display_key` (оригинальный ключ);
+    - `key` (нормализованный lowercase ключ);
+    - `tokens` (разбиение ключа по [^a-z0-9_], чтобы `ul-ol-li` искалось
+      по `ul`, `ol`, `li`) (`ul-ol-li` → `ul`, `ol`, `li`);
+    - `categories` (список категорий);
+    - `aliases` (нормализованные lowercase);
+    - `file_path`, `start_line`;
+    - `markdown` содержимое секции;
+    - список код-блоков **кодовые блоки** внутри секции (` ```lang ... ``` `), поддерживает любые языки (`c++`, `tsx`, и
+      т.п.).
+    -
 - Разделители `===` и `---` необязательны
 - Строка категорий и алиасы могут отсутствовать
 - Глубина категорий — любая
 - Алиасы — через запятую, точку с запятой или пробел
 - код-блоков - может быть несколько
-  
-# 4. Логика поиска
-- Поиск должен поддерживать:
-  - точное совпадение ключа;
-  - совпадение по алиасам;
-  - подстрочное совпадение в ключе, алиасах, токенах;
-  - совпадение по токенам;
-  - Fuzzy-поиск для неточных запросов;
-  - Если есть точное совпадение — оно приоритетнее;
-  - Результат — Section или None + список кандидатов.
-  - если кандидатов несколько - хранить список всех кандидатов, с точным совпадением всегда первый
 
+# 4. Логика поиска
+
+- Поиск должен поддерживать:
+    - точное совпадение ключа;
+    - совпадение по алиасам;
+    - подстрочное совпадение в ключе, алиасах, токенах;
+    - совпадение по токенам;
+    - Fuzzy-поиск для неточных запросов;
+    - Если есть точное совпадение — оно приоритетнее;
+    - Результат — Section или None + список кандидатов.
+    - если кандидатов несколько - хранить список всех кандидатов, с точным совпадением всегда первый
 
 # 5. **Точная схема UI**
+
 - Интерфейс в `tkinter`, структура элементов и их расположение **фиксированные**:
 
 ## Верхняя панель (Topbar)
+
 - Горизонтальная полоса сверху окна (`ttk.Frame`, `padding=6`).
 - Слева направо:
-  1. Кнопка `◀` (width=3) — Назад.
-  2. Отступ 4px.
-  3. Кнопка `▶` (width=3) — Вперёд.
-  4. Отступ 10px.
-  5. Метка `Поиск:`.
-  6. поле (`ttk.Combobox`) (в режиме ввода текста, state="normal") — со списком всех кандидатов растягивается на всё оставшееся пространство.
-  7. Отступ 4px.
-  8. Кнопка `Искать`.
-  9. Отступ 4px.
-  10. Кнопка `Найти в дереве`.
-  
+    1. Кнопка `◀` (width=3) — Назад.
+    2. Отступ 4px.
+    3. Кнопка `▶` (width=3) — Вперёд.
+    4. Отступ 10px.
+    5. Метка `Поиск:`.
+    6. поле (`ttk.Combobox`) (в режиме ввода текста, state="normal") — со списком всех кандидатов растягивается на всё
+       оставшееся пространство.
+    7. Отступ 4px.
+    8. Кнопка `Искать`.
+    9. Отступ 4px.
+    10. Кнопка `Найти в дереве`.
+
 ## Основная область (PanedWindow горизонтальный)
+
 - Делится на **левую** и **правую** части, вес 1:3.
 
 ### Левая часть — Notebook с двумя вкладками
+
 1. **Вкладка "Категории"**:
-   - Один `ttk.Treeview` (`show="tree"`, без заголовков).
-   - Заполняется из дерева категорий секций.
-   - в скобках показывает путь к файлу
+    - Один `ttk.Treeview` (`show="tree"`, без заголовков).
+    - Заполняется из дерева категорий секций.
+    - в скобках показывает путь к файлу
 2. **Вкладка "Файлы"**:
-   - Один `ttk.Treeview` (`show="tree"`, без заголовков).
-   - дерево структуры файлов.
-   - Показывает папки 📁 и файлы 📄.
+    - Один `ttk.Treeview` (`show="tree"`, без заголовков).
+    - дерево структуры файлов.
+    - Показывает папки 📁 и файлы 📄.
 
 ### Правая часть — PanedWindow вертикальный
+
 - Делится на **верх** и **низ**, вес 3:2.
 
 #### Верхняя панель (Markdown-текст)
-   - `ttk.Frame(padding=6)` внутри верхней половины.
+
+- `ttk.Frame(padding=6)` внутри верхней половины.
 
 1. **Горизонтальная «шапка» (ttk.Frame), занимающую всю ширину (показать полный путь к файлу)**:
-   - Метка `Файл:`.
-   - поле с полным путем к файлу
-   - горизонтальную «шапку» (ttk.Frame), занимающую всю ширину.
-   - Слева — элемент, показывающий полный путь к текущему .md (на выбор: ttk.Label с font=("Consolas",10) и wraplength 
-   для переноса, или ttk.Entry(state="readonly") для удобного копирования).
-   - Справа — две кнопки: «Копировать путь» — копирует полный путь в буфер обмена. 
-   «Открыть папку» — открывает каталог файла в Проводнике/Файндере/менеджере файлов (Windows: explorer, macOS: open, Linux: xdg-open).
-   
-2. **Текстовое поле для Markdown-текст**:   
-   - Многострочное `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`), занимает всё пространство.
-   - Вертикальный скроллбар справа.
+    - Метка `Файл:`.
+    - поле с полным путем к файлу
+    - горизонтальную «шапку» (ttk.Frame), занимающую всю ширину.
+    - Слева — элемент, показывающий полный путь к текущему .md (на выбор: ttk.Label с font=("Consolas",10) и wraplength
+      для переноса, или ttk.Entry(state="readonly") для удобного копирования).
+    - Справа — две кнопки: «Копировать путь» — копирует полный путь в буфер обмена.
+      «Открыть папку» — открывает каталог файла в Проводнике/Файндере/менеджере файлов (Windows: explorer, macOS: open,
+      Linux: xdg-open).
+
+2. **Текстовое поле для Markdown-текст**:
+    - Многострочное `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`), занимает всё пространство.
+    - Вертикальный скроллбар справа.
 
 #### Нижняя панель (Кодовые блоки)
+
 - `ttk.Frame(padding=6)` внутри нижней половины.
 
 1. **Верхняя строка (панель выбора блока кода)**:
-   - Метка `Кодовые блоки:`.
-   - Отступ 6px.
-   - `ttk.Combobox` (`state="readonly"`, растягивается).
-   - При выборе — отображает выбранный код в текстовом поле.
+    - Метка `Кодовые блоки:`.
+    - Отступ 6px.
+    - `ttk.Combobox` (`state="readonly"`, растягивается).
+    - При выборе — отображает выбранный код в текстовом поле.
 
 
 3. **Текстовое поле для кода**:
-   - `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`, height=12).
-   - Вертикальный скроллбар справа.
-   - Заполняется содержимым выбранного код-блока.
-   
+    - `tk.Text` (`wrap=tk.NONE`, `font=("Consolas", 11)`, height=12).
+    - Вертикальный скроллбар справа.
+    - Заполняется содержимым выбранного код-блока.
+
 2. **Нижняя строка (панель кнопок)**:
-   - Кнопка `Скопировать весь блок` — копирует всю секцию Markdown (без pop‑up).
-   - Отступ 4px.
-   - Кнопка `Скопировать код` — копирует текущий код-блок (без pop‑up).
-   - Отступ 4px.
-   - Кнопка `Открыть .md` — открывает файл в системной программе.
-   - Справа — кнопка `Закрыть`.
-   - 
+    - Кнопка `Скопировать весь блок` — копирует всю секцию Markdown (без pop‑up).
+    - Отступ 4px.
+    - Кнопка `Скопировать код` — копирует текущий код-блок (без pop‑up).
+    - Отступ 4px.
+    - Кнопка `Открыть .md` — открывает файл в системной программе.
+    - Справа — кнопка `Закрыть`.
+    -
+
 # 6. Поведение UI
+
 - При запуске без аргумента — пустой поиск.
 - Поддержка запуска с аргументом (`python script.py <ключ>`) — автопоиск.
 - Двойной клик в дереве категорий на "§ ключ" — открывает секцию.
@@ -137,20 +155,20 @@
 - История поиска — кнопки ◀ ▶.
 - Поле поиска заполняется текущим ключом при открытии секции.
 
-
 # 7. Особенности реализации
+
 - Весь код должен быть **в одном файле**, запускаться сразу.
 - Группировка кода по блокам:
-  1. Докстринг с описанием.
-  2. Импорты.
-  3. Константы.
-  4. Вспомогательные функции парсинга.
-  5. Поисковые функции.
-  6. Построение дерева для UI.
-  7. Утилиты для открытия файлов и работы буфера обмена.
-  8. Класс `App_UI` (UI) Все UI-элементы и функции сгруппированы в этом классе.
-  9. Функция `main()`.
-  10. `if __name__ == '__main__': main()`.
+    1. Докстринг с описанием.
+    2. Импорты.
+    3. Константы.
+    4. Вспомогательные функции парсинга.
+    5. Поисковые функции.
+    6. Построение дерева для UI.
+    7. Утилиты для открытия файлов и работы буфера обмена.
+    8. Класс `App_UI` (UI) Все UI-элементы и функции сгруппированы в этом классе.
+    9. Функция `main()`.
+    10. `if __name__ == '__main__': main()`.
 - Максимум пояснительных комментариев, даже для очевидных мест.
 - чёткое именование переменных.
 - Логика поиска должна учитывать **токенизацию ключа** для улучшенной фильтрации.
@@ -162,13 +180,22 @@
 ==========================
 HTML - Списки
 aliases: lists, bullets
+categories: Web - HTML - Списки
+categories: Web - HTML - Теги
 Описание...
+
 ```html
-<ul><li>HTML</li><li>CSS</li></ul>
+
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+</ul>
 ```
 
 # 9. Требования к тестовой документации**
+
 Для тестов создать в `docs` несколько `.md` файлов:
+
 - HTML
 - CSS
 - JavaScript
@@ -181,22 +208,29 @@ aliases: lists, bullets
 - SQL
 
 В каждом:
+
 - минимум 2–3 секции с разными категориями,
 - хотя бы одна секция с `aliases:`,
 - хотя бы один многоуровневый путь категорий,
 - хотя бы один пример с несколькими кодовыми блоками.
-- 
-# 9. Вывод
-Сгенерируй полный скрипт Python с этой структурой UI, парсером Markdown, поиском с токенизацией и подробными комментариями на русском.
+-
+
+# 10. Вывод
+
+Сгенерируй полный скрипт Python с этой структурой UI, парсером Markdown, поиском с токенизацией и подробными
+комментариями на русском.
 Все функции — максимально простые, без усложнений.
 
-# 10. Результат
+# 11. Результат
+
 Создай проект и выдай ссылки на скачивание:
+
 - Папка проекта: context_doc/
 - Внутри:
-  - tools/context_doc.py — ГЛАВНЫЙ СКРИПТ
-  - docs/ — набор тестовых .md: html.md, css.md, js.md, python.md, odoo.md, pycharm.md, pgadmin.md, github.md, md.md, sql.md
-  - README.md — правила оформления .md (см. ниже)
-   
+    - tools/context_doc.py — ГЛАВНЫЙ СКРИПТ
+    - docs/ — набор тестовых .md: html.md, css.md, js.md, python.md, odoo.md, pycharm.md, pgadmin.md, github.md, md.md,
+      sql.md
+    - README.md — правила оформления .md (см. ниже)
+
 Сгенерируй все файлы проекта (желательно дать ссылку на ZIP и/или отдельные ссылки).
 Покажи полностью исходник tools/context_doc.py.
