--- a/_tu_helper/_Py_script/context-docs/master_promt/12.md
+++ b/_tu_helper/_Py_script/context-docs/master_promt/12.md
@@ -4,6 +4,9 @@
 Твоя задача — сгенерировать полностью готовый **самодостаточный скрипт** на Python
 Весь функционал и интерфейс должен быть реализован в одном .py файле, который:
 
+разбиение на отдельные файлы. всё максимально простое и русскими комментариями. сложи их в одну папку (например, tools/)
+и запускай центральный файл app_main.py.
+
 # 1. Общие требования
 
 - Работает на Python 3.8+.
