--- a/_tu_helper/_Py_script/GPT/00 старт.md
+++ b/_tu_helper/_Py_script/GPT/00 старт.md
@@ -6,7 +6,10 @@
 в проект, проанализируй все ли тебе в нем понятно и опиши своими словами назначение и принцип работы, посмотри вложенный
 ТЗ - сравни с кодом и настройками, текущий скрипт и файл конфигурации - меняешь только по нашей предварительной
 договоренности, скрипты в чате генерируй только по моим отдельным указаниям, файлы выкладывай всегда полные обновленные
-как ссылки на скачивание,
+как ссылки на скачивание, всегда файлы скрипта называй autolayout.py, а файл конфигурации config_autolayout.toml,
+
+всегда выкладывай полный обновленный рабочий скрипт
+
 файл настроек был максимально комментирован на русском с указанием и описанием всех вариантов значений параметров,
 скрипт максимально комментирован на русском и максимально просто написан
 
