--- a/_tu_helper/_Wiki/_Odoo/Установка Оду/подключение к проекту Гит/установка зависимостей.md
+++ b/_tu_helper/_Wiki/_Odoo/Установка Оду/подключение к проекту Гит/установка зависимостей.md
@@ -1,1 +1,3 @@
 ![img_11.png](img_11.png)
+
+PS D:\Work_Odoo\odoo_site\odoo_falcon> pip install -r D:\Work_Odoo\Odoo_SMK\Odoo_relizes\community\odoo18_20250725\requirements.txt
