MASTER-PROMPT Excel → MD → генерация Odoo-модуля

--- a/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
+++ b/_tu_helper/_Wiki/_Odoo/Dev Docs/Представления/Расположения полей/несколько полей в одну строку.md
@@ -26,8 +26,7 @@
             <small class="mx-2 fst-italic">Use a negative added value to record a decrease in the product value</small></span>
         </div>
 
-
-поля в одну строку с текстом
+поля в одну строку с текстом и картинкой
 =====================================================
 ![img_1.png](img_1.png)
 
@@ -49,4 +48,30 @@
             <group>
                 <field name="create_date" class="oe_inline"/>
             </group>
+        </group>
+
+поля в одну строку с текстом и картинкой
+=====================================================
+![img_2.png](img_2.png)
+если кнопку выводить перед полем, то выводимое поле НЕ куцое
+(не уменьшается в размере относительно других полей в группе)
+и class="oe_inline" - НЕ ставить (иначе поле скукожится)
+
+        <group>
+            <field name="name"/>
+
+            <div class="o_row">
+                <label for="py_target_class" class="fw-bold"/>
+                <button name="action_generate_py_target_class"
+                        type="object"
+                        icon="fa-magic"
+                        class="oe_link"
+                        title="Generate class name"/>
+
+                <field name="py_target_class" placeholder="Auto"/>
+            </div>
+
+
+            <field name="module_id"/>
+
         </group>
